src/markdown/snapshots/veol__markdown__layout__tests__layout_code_block_long_line_wraps.snap
---
source: src/markdown/layout.rs
expression: rendered
---
verylongidentifierwi
  thnoboundariesatal
  l_continues
