src/markdown/snapshots/veol__markdown__layout__tests__layout_code_block_with_lang_label.snap
---
source: src/markdown/layout.rs
expression: rendered
---
 rust                         
fn main() {}
