src/markdown/snapshots/veol__markdown__layout__tests__layout_footnote_definition.snap
---
source: src/markdown/layout.rs
assertion_line: 1106
expression: rendered
---
see[^1].
[^1]: the note body here
