src/markdown/snapshots/veol__markdown__layout__tests__layout_frontmatter_card_toml.snap
---
source: src/markdown/layout.rs
assertion_line: 1120
expression: rendered
---
┌────────────────────────────────────────────────┐
│  author   guiwohl                              │
│  title    Veol                                 │
└────────────────────────────────────────────────┘

Body
