src/markdown/snapshots/veol__markdown__layout__tests__layout_frontmatter_card_yaml.snap
---
source: src/markdown/layout.rs
assertion_line: 1113
expression: rendered
---
┌────────────────────────────────────────────────┐
│  title    Veol — Spec                          │
│  author   guiwohl                              │
│  date     2026-05-26                           │
└────────────────────────────────────────────────┘

Body
