src/markdown/snapshots/veol__markdown__layout__tests__layout_horizontal_rule.snap
---
source: src/markdown/layout.rs
assertion_line: 1099
expression: rendered
---
foo
────────────────────

bar
