src/markdown/snapshots/veol__markdown__layout__tests__layout_paragraph_with_bold_italic_strike_link.snap
---
source: src/markdown/layout.rs
assertion_line: 1005
expression: rendered
---
bold italic strike and a link.
