src/markdown/snapshots/veol__markdown__layout__tests__layout_paragraph_wraps_at_word_boundary.snap
---
source: src/markdown/layout.rs
assertion_line: 997
expression: rendered
---
the quick brown fox 
jumps over the lazy 
dog
