src/markdown/snapshots/veol__markdown__layout__tests__layout_table_wide_shrinks_via_wrap.snap
---
source: src/markdown/layout.rs
assertion_line: 1092
expression: rendered
---
┌──────────────┬─────────────┐
│ col1         │ col2        │
├──────────────┼─────────────┤
│ a long       │ another     │
│ sentence     │ long-ish    │
│ that must    │ piece       │
│ wrap         │             │
└──────────────┴─────────────┘
