src/markdown/snapshots/veol__markdown__layout__tests__layout_table_with_alignments.snap
---
source: src/markdown/layout.rs
expression: rendered
---
┌────┬────┬─────┐
│ L  │ C  │   R │
├────┼────┼─────┤
│ a  │ bb │ ccc │
├────┼────┼─────┤
│ dd │ e  │   f │
└────┴────┴─────┘
