src/markdown/snapshots/veol__markdown__layout__tests__layout_task_list_done_and_pending.snap
---
source: src/markdown/layout.rs
assertion_line: 1076
expression: rendered
---
• [x] done thing
• [ ] pending thing
